--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "bulma": "^1.0.3",
     "classnames": "^2.5.1",
     "react": "^19.0.0",
