--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bulma": "^1.0.3",
     "classnames": "^2.5.1",
