--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
     "body-parser": "^2.2.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1"
