--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "comet-commerce",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,11 +12,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "bootstrap": "^5.3.5",
     "bulma": "^1.0.3",
     "classnames": "^2.5.1",
+    "mongoose": "^8.13.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
