Error checking on message and chat controllers

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_CONN_STRING="mongodb+srv://cometcommerce6348:i1OlL9T3HsAp6jXc@cluster0.coh9pgj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+DB_CONN_STRING="mongodb+srv://cometcommerce6348:ryJMHszsD6E1p5wS@cluster0.coh9pgj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 DB_NAME="CometCommerce"
 USERS_COLLECTION_NAME="Users"
