--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@types/node": "^22.14.1",
     "bootstrap": "^5.3.5",
     "bulma": "^1.0.3",
     "classnames": "^2.5.1",
