--- a/template.env
+++ b/template.env
@@ -2,6 +2,7 @@ ENVIRONMENT="DEV"
 DB_CONN_STRING="mongodb://user:passwd@dbname.mongodb.net"
 DB_NAME=""
 USERS_COLLECTION_NAME=""
+CORS_ALLOWED_ORIGIN="http://localhost:5173"
 SSL_PRIVATE_KEY=""
 SSL_CERTIFICATE=""
 ENABLE_HTTPS="true"
